<resources>
    <string name="app_name">Binance</string>
    <string name="binance_api_key">miyKqwrlPPdzvXOhuwDZ6JSXkVax6a9UIHECtE3hhXoBENP2SA6K3WUf0FAlOf9X</string>
    <string name="binance_api_secret">QrTDrZyF1KimlM4fvI1Ksc9wI3A8OvL1vjwtnWI8pLFt8d9CFyBNsSPYrsHiiImK</string>

    <string name="market_tab_title">Markets</string>
    <string name="trades_tab_title">Trades</string>
    <string name="funds_tab_title">Funds</string>
    <string name="account_tab_title">Account</string>

    <string name="increase">↑</string>
    <string name="decrease">↓</string>

    <string name="market_tab_favorite">Favorites</string>
    <string name="market_tab_bnb">BNB</string>
    <string name="market_tab_btc">BTC</string>
    <string name="market_tab_eth">ETH</string>
    <string name="market_tab_usdt">USDT</string>

    <string name="market_pair">Pair</string>
    <string name="market_vol">Vol</string>
    <string name="market_pair_vol_div">/</string>
    <string name="market_last_price">Last Price</string>
    <string name="market_pair_24h_change">24h Chg%</string>

    <string name="market_item_ref_token_format">&#160;/ %1$s</string>
    <string name="market_item_volume_format">Vol %1$s</string>
    <string name="market_item_price_usd_format">$%1$s</string>
    <string name="market_item_change_format">%1$s%%</string>

    <string name="market_detail_toolbar_format">%1$s / %2$s</string>
    <string name="market_detail_low_label">Low</string>
    <string name="market_detail_high_label">High</string>
    <string name="market_detail_volume_format">Vol %1$s %2$s</string>
    <string name="market_detail_time_label">Time</string>
    <string name="market_detail_depth_label">Depth</string>
    <string name="market_detail_order_book_label">Order Book</string>
    <string name="market_detail_market_trades_label">Market Trades</string>
    <string name="market_detail_buy_label">Buy</string>
    <string name="market_detail_sell_label">Sell</string>
    <string name="market_detail_bid_label">Bid</string>
    <string name="market_detail_ask_label">Ask</string>
    <string name="market_detail_full_label">Full</string>
    <string name="market_trade_time_label">Time</string>
    <string name="market_trade_price_label">Price</string>
    <string name="market_trade_amount_label">Amount</string>
</resources>
