<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.tompee.binance.model.SortManager.SortType" />

        <variable
            name="sortManager"
            type="com.tompee.binance.model.SortManager" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.tompee.binance.MainActivity">

        <include
            android:id="@+id/include"
            layout="@layout/market_toolbar"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/tabBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_tab_market_active"
                android:gravity="center"
                android:text="@string/market_tab_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent"
                android:textSize="10sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_tab_trade_inactive"
                android:gravity="center"
                android:text="@string/trades_tab_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorLightGrey"
                android:textSize="10sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_tab_funds_inactive"
                android:gravity="center"
                android:text="@string/funds_tab_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorLightGrey"
                android:textSize="10sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_tab_account_inactive"
                android:gravity="center"
                android:text="@string/account_tab_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorLightGrey"
                android:textSize="10sp" />
        </LinearLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout_main"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabIndicatorHeight="3dp"
            app:tabMaxWidth="0dp"
            app:tabSelectedTextColor="@color/colorAccent"
            app:tabTextAppearance="@style/MarketTabTextAppearance" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorListBg"
            app:layout_constraintBottom_toTopOf="@id/tabBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ltp" />

        <TextView
            android:id="@+id/pair"
            style="@style/MarketSortTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/market_pair"
            android:textColor="@drawable/selector_sort_button_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout_main" />

        <TextView
            android:id="@+id/pairSymbol"
            style="@style/MarketSortTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/increase"
            android:textColor="@color/colorAccent"
            app:isVisible="@{sortManager.sortType == SortType.PAIR}"
            app:layout_constraintStart_toEndOf="@id/pair"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout_main" />

        <TextView
            android:id="@+id/pairVolDiv"
            style="@style/MarketSortTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/market_pair_vol_div"
            android:textColor="@drawable/selector_sort_button_text"
            app:layout_constraintStart_toEndOf="@id/pairSymbol"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout_main" />

        <TextView
            android:id="@+id/vol"
            style="@style/MarketSortTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/market_vol"
            android:textColor="@drawable/selector_sort_button_text"
            app:layout_constraintStart_toEndOf="@+id/pairVolDiv"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout_main" />

        <TextView
            android:id="@+id/volSymbol"
            style="@style/MarketSortTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/decrease"
            android:textColor="@color/colorAccent"
            app:isVisible="@{sortManager.sortType == SortType.VOL}"
            app:layout_constraintStart_toEndOf="@id/vol"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout_main" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <TextView
            android:id="@+id/ltp"
            style="@style/MarketSortTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/market_last_price"
            android:textColor="@drawable/selector_sort_button_text"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout_main" />

        <TextView
            android:id="@+id/ltpSymbol"
            style="@style/MarketSortTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorAccent"
            app:isIncreasingText="@{sortManager.sortType == SortType.LAST_PRICE_ASCENDING}"
            app:isVisible="@{sortManager.sortType == SortType.LAST_PRICE_ASCENDING || sortManager.sortType == SortType.LAST_PRICE_DESCENDING}"
            app:layout_constraintStart_toEndOf="@id/ltp"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout_main" />

        <TextView
            android:id="@+id/percentChange"
            style="@style/MarketSortTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/market_pair_24h_change"
            android:textColor="@drawable/selector_sort_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout_main" />

        <TextView
            android:id="@+id/changeSymbol"
            style="@style/MarketSortTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorAccent"
            app:isIncreasingText="@{sortManager.sortType == SortType.PERCENT_CHANGE_ASCENDING}"
            app:isVisible="@{sortManager.sortType == SortType.PERCENT_CHANGE_ASCENDING || sortManager.sortType == SortType.PERCENT_CHANGE_DESCENDING}"
            app:layout_constraintStart_toEndOf="@id/percentChange"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout_main" />

    </android.support.constraint.ConstraintLayout>
</layout>