<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="marketItem"
            type="com.tompee.binance.model.MarketItem" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

        <include
            android:id="@+id/toolbar_view"
            layout="@layout/market_detail_toolbar" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/buySell"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <Button
                android:id="@+id/buy"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPositiveChange"
                android:text="@string/market_detail_buy_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/sell"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorNegativeChange"
                android:text="@string/market_detail_sell_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/buySell"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_view">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorListBg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="28sp"
                    app:doubleText="@{marketItem.price}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:priceChangeTextColorDetail="@{marketItem.priceChange}" />

                <TextView
                    android:id="@+id/priceSymbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    app:isIncreasingText="@{marketItem.priceChange > 0}"
                    app:isIncreasingTextColor="@{marketItem.priceChange > 0}"
                    app:layout_constraintBottom_toBottomOf="@id/price"
                    app:layout_constraintStart_toEndOf="@id/price"
                    app:layout_constraintTop_toTopOf="@id/price" />

                <TextView
                    android:id="@+id/priceUsd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@{String.format(@string/market_item_price_usd_format, marketItem.priceUsd)}"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="@+id/price"
                    app:layout_constraintStart_toEndOf="@+id/priceSymbol"
                    app:layout_constraintTop_toTopOf="@+id/price" />

                <TextView
                    android:id="@+id/priceChange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    app:doubleText="@{marketItem.priceChange}"
                    app:isIncreasingTextColor="@{marketItem.priceChange >= 0}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/price" />

                <TextView
                    android:id="@+id/change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    app:changeText="@{marketItem.change}"
                    app:isIncreasingTextColor="@{marketItem.change >= 0}"
                    app:layout_constraintBottom_toBottomOf="@+id/priceChange"
                    app:layout_constraintStart_toEndOf="@+id/priceChange"
                    app:layout_constraintTop_toTopOf="@+id/priceChange" />

                <TextView
                    android:id="@+id/priceLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorWhite"
                    app:doubleText="@{marketItem.priceLow}"
                    app:layout_constraintBottom_toBottomOf="@+id/change"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/lowLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/market_detail_low_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorLightGrey"
                    app:layout_constraintBottom_toBottomOf="@+id/priceLow"
                    app:layout_constraintEnd_toStartOf="@+id/priceLow"
                    app:layout_constraintTop_toTopOf="@+id/priceLow" />

                <TextView
                    android:id="@+id/vol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@{String.format(@string/market_detail_volume_format, marketItem.volumeText, marketItem.refTokenName)}"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/change" />

                <TextView
                    android:id="@+id/priceHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorWhite"
                    app:doubleText="@{marketItem.priceHigh}"
                    app:layout_constraintBottom_toBottomOf="@+id/vol"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/highLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/market_detail_high_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorLightGrey"
                    app:layout_constraintBottom_toBottomOf="@+id/priceHigh"
                    app:layout_constraintEnd_toStartOf="@+id/priceHigh"
                    app:layout_constraintTop_toTopOf="@+id/priceHigh" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/options"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/vol">

                    <LinearLayout
                        android:id="@+id/full"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/border_full"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="16dp"
                            android:gravity="center_vertical"
                            android:text="@string/market_detail_full_label"
                            android:textColor="@color/colorWhite" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginStart="4dp"
                            android:background="@drawable/ic_market_detail_full" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/time"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:text="@string/market_detail_time_label"
                        android:textAllCaps="false"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/depth"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:text="@string/market_detail_depth_label"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/time"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <ImageView
                    android:id="@+id/graph"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:background="@drawable/kline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/options" />

                <Button
                    android:id="@+id/orderBook"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_marginEnd="0.5dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorSelectedOrderTrade"
                    android:text="@string/market_detail_order_book_label"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/graph" />

                <Button
                    android:id="@+id/marketTrades"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="0.5dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/market_detail_market_trades_label"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/graph" />

                <FrameLayout
                    android:id="@+id/orderTradeContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/orderBook" />

            </android.support.constraint.ConstraintLayout>

        </ScrollView>
    </android.support.constraint.ConstraintLayout>
</layout>
